fixed bug with lifetime hit ratio causing erroneous ban ip lookup on profile shows error if failed truncate chat messages over 50 characters removed html raw on client messages :c show client rank colors on server overview if authorized break long messages on profile page prevent masked status showing up to non privileged users in webfront

--- a/WebfrontCore/wwwroot/css/profile.css
+++ b/WebfrontCore/wwwroot/css/profile.css
@@ -3,14 +3,14 @@
 }
 
 .level-color-user, .level-color-guest {
-    color: rgba(255, 255, 255, 0.85);
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .level-bgcolor-user, .level-bgcolor-guest {
     background-color: rgba(255, 255, 255, 0.85);
 }
 
-.level-color-trusted, .level-color-user {
+.level-color-trusted {
     color: rgba(116,147,99,1);
 }
 
@@ -158,3 +158,7 @@
     .profile-action:hover {
         opacity: 0.75;
     }
+
+#profile_events span {
+    word-break: break-all;
+}
